--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ body {
 	margin: 0;
 	paddin: 0;
 	font-family: 'Source Sans Pro', sans-serif;
-	background-color: #35475E;
+	background-color: #D5DAE5;
 	-webkit-font-smoothing: antialiased;
   	-moz-osx-font-smoothing: grayscale;
 }
@@ -96,6 +96,8 @@ body {
 /* side navigation styles */
 .side-nav {
 	position: absolute;
+	top: 0;
+	bottom: 0;
 	width: 100%;
 	height: 100vh;
 	background-color: #35475e;
@@ -338,6 +340,7 @@ body {
 /* filter */
 .wrapper{
 	position:relative;
+	height: 100vh;
 }
 #filter-sidebar {
     position: fixed;
